--- a/style.css
+++ b/style.css
@@ -125,3 +125,7 @@ nav a:hover {
     box-shadow: 0 5px 15px rgba(255, 255, 255, 0.4);
     transform: scale(1.5);
 }
+
+.icon {
+    color: white;
+}
