--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     height: 820px;
     width: 100%;
     margin-bottom: 50x;
-    background-image: url("../images/background.jpg");
+    background-image: url("../images/background1.jpg");
     background-size: cover;
     background-position: center;   
 }
@@ -15,7 +15,7 @@ header {
     transform: translate(-50%, -50%);
     text-align: center;
     font-family: ink free;
-    font-size: 40px;
+    font-size: 60pt;
 
 }
 
