--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 
-.hero {
-    height: 820px;
+.hero-image {
+    background-image: url("./images/background.jpg");
+    height: 20%;
     width: 100%;
-    margin-bottom: 50x;
-    background-image: url("./images/background1.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;   
-    padding: 10%;
+    position: relative;
+    padding: 30%;
 }
-
-header {
+.hero-text {
     position: absolute;
     top: 50%;
     left: 50%;
