--- a/style.css
+++ b/style.css
@@ -1,25 +1,24 @@
 
+
 .hero-image {
     background-image: url("./images/background.jpg");
-    height: 20%;
+    height: 50%;
     width: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    padding: 30%;
+    padding: 25%;
     flex-wrap: wrap;
 
 }
 .hero-text {
+    text-align: center;
     position: absolute;
-    flex-wrap: inherit;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-align: center;
     font-family: ink free;
-    font-size: 60pt;
+    font-size: 50pt;
+    
 
 }
 
@@ -27,6 +26,7 @@
     color: teal;
     font-weight: bolder;
     font-family: ink free;
+    flex-wrap: wrap;
 }
 
 nav {
@@ -48,6 +48,7 @@ nav {
    
  }
 
+/* Nav Text */
  a {
      color: white;
      text-decoration: none;
@@ -69,7 +70,7 @@ nav {
 main {
     display: block;
     flex-wrap: wrap;
-    background-image: url(./images/background.jpg);
+    background-image: url(./images/background2.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
